%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Male1
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Attack
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Idle
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Die
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Walk
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Skill1
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: GetHit
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Run
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400008, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: Speed
  m_BlendParameterY: New Float
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110273858}
  m_DstState: {fileID: 110222691}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110106528
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110222691}
  m_DstState: {fileID: 110285464}
  m_TransitionDuration: .149999991
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: .850000024
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110106624
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110285464}
  m_TransitionDuration: .421348363
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: .578651667
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110108631
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110224119}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110115630
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110212148}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: GetHit
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110126733
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110202218}
  m_DstState: {fileID: 110267276}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 2
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110128511
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110285464}
  m_DstState: {fileID: 110224119}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 2
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110139328
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110222691}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Idle
    m_EventTreshold: .100000001
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110140089
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110202218}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145420
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110222691}
  m_DstState: {fileID: 110256163}
  m_TransitionDuration: .149999991
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .850000024
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145591
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110222691}
  m_DstState: {fileID: 110212148}
  m_TransitionDuration: .149999991
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: GetHit
    m_EventTreshold: 0
    m_ExitTime: .850000024
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145782
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110256163}
  m_DstState: {fileID: 110245782}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110155460
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110285464}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110155688
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110262772}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Die
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110167462
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110224119}
  m_DstState: {fileID: 110202218}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  - m_ConditionMode: 2
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110167904
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110222691}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0749999881
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: .100000001
    m_ExitTime: .925000012
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110173858
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245782}
  m_DstState: {fileID: 110273858}
  m_TransitionDuration: .214285478
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .785714507
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110175930
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110212148}
  m_DstState: {fileID: 110222691}
  m_TransitionDuration: .214284778
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .785715222
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110180608
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267276}
  m_DstState: {fileID: 110222691}
  m_TransitionDuration: .187499911
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .812500119
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110195155
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110267276}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .187499911
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Skill1
    m_EventTreshold: 0
    m_ExitTime: .812500119
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .812500119
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400120, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: 288, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Run
--- !u!1102 &110202218
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack3
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400064, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110769424}
  m_Position: {x: 492, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Attack
--- !u!1102 &110212148
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: GetHit
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: GetHit
--- !u!1102 &110216601
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 120, y: 72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110222691
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Idle
--- !u!1102 &110224119
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack2
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400066, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110769424}
  m_Position: {x: 492, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Attack
--- !u!1102 &110245782
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Skill
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400066, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110773858}
  m_Position: {x: 492, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Skill
--- !u!1102 &110256163
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SkillBegin
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400042, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110773858}
  m_Position: {x: 492, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Skill
--- !u!1102 &110262772
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Dead
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400106, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 276, y: -36, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Dead
--- !u!1102 &110267276
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack4
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110769424}
  m_Position: {x: 492, y: 72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Attack
--- !u!1102 &110273858
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SkillEnd
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400064, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110773858}
  m_Position: {x: 492, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Skill
--- !u!1102 &110285464
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack1
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400042, guid: 8546391a3a0c97944a04cf5018ee3b8d, type: 3}
  m_ParentStateMachine: {fileID: 110769424}
  m_Position: {x: 492, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Attack
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110222691}
  m_States:
  - {fileID: 110222691}
  - {fileID: 110200000}
  - {fileID: 110212148}
  - {fileID: 110262772}
  m_ChildStateMachine:
  - {fileID: 110769424}
  - {fileID: 110773858}
  m_ChildStateMachinePosition:
  - {x: 192, y: 192, z: 0}
  - {x: 192, y: 312, z: 0}
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110155688}
      - {fileID: 110115630}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110139328}
      - {fileID: 110106624}
    data:
      first: {fileID: 110202218}
      second:
      - {fileID: 110126733}
      - {fileID: 110140089}
    data:
      first: {fileID: 110212148}
      second:
      - {fileID: 110175930}
    data:
      first: {fileID: 110222691}
      second:
      - {fileID: 110167904}
      - {fileID: 110106528}
      - {fileID: 110145420}
    data:
      first: {fileID: 110224119}
      second:
      - {fileID: 110167462}
      - {fileID: 110108631}
    data:
      first: {fileID: 110245782}
      second:
      - {fileID: 110173858}
    data:
      first: {fileID: 110256163}
      second:
      - {fileID: 110145782}
    data:
      first: {fileID: 110262772}
      second: []
    data:
      first: {fileID: 110267276}
      second:
      - {fileID: 110180608}
      - {fileID: 110195155}
    data:
      first: {fileID: 110273858}
      second:
      - {fileID: 110100000}
    data:
      first: {fileID: 110285464}
      second:
      - {fileID: 110128511}
      - {fileID: 110155460}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 48, y: -36, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110769424
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_DefaultState: {fileID: 110267276}
  m_States:
  - {fileID: 110267276}
  - {fileID: 110285464}
  - {fileID: 110224119}
  - {fileID: 110202218}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110202218}
      second:
      - {fileID: 110126733}
    data:
      first: {fileID: 110224119}
      second:
      - {fileID: 110167462}
    data:
      first: {fileID: 110285464}
      second:
      - {fileID: 110128511}
  m_MotionSetCount: 2
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 816, y: -48, z: 0}
--- !u!1107 &110773858
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Skill1
  m_DefaultState: {fileID: 0}
  m_States:
  - {fileID: 110256163}
  - {fileID: 110245782}
  - {fileID: 110273858}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110245782}
      second:
      - {fileID: 110173858}
    data:
      first: {fileID: 110256163}
      second:
      - {fileID: 110145782}
    data:
      first: {fileID: 110273858}
      second: []
  m_MotionSetCount: 3
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 828, y: -72, z: 0}
